= 0.5.4 / 2011-09-20

  * Added requestTime environment variable.

  * Added manual chapters on serving static files, rewriting URL's, and gzip
    compression.

= 0.5.3 / 2011-09-20

  * Removed multipart.File#unlink

  * The manual module now exports an array of all chapters in order.

  * More docs.

= 0.5.2 / 2011-09-19

  * Added dependency on markdown package for manual HTML formatting

  * Removed mime module (using npm's mime package instead)

= 0.5.1 / 2011-09-14

  * Added rewrite middleware (similar to Apache's mod_rewrite)

  * Renamed strata.location environment variable to strata.referrer

= 0.5.0 / 2011-09-13

  * Changed environment variable naming scheme so that all may use the dot
    syntax, instead of bracket syntax.

= 0.4.5 / 2011-09-13

  * Switched to gzbz2 for gzip compression.

  * Fixed gzip encoding bug.

= 0.4.4 / 2011-09-12

  * Added examples module.

= 0.4.3 / 2011-09-12

  * Added redirect module.

  * Added Mapper.run and Router.run to mimic Builder.run.

= 0.4.2 / 2011-09-10

  * Added get/post/put/del/head/options convenience functions to Router/Builder.

  * Added access to miscellaneous internal modules (e.g. mime, mock).

  * Request.parseableData returns true when Request.formData is true.

  * Better examples.

= 0.4.1 / 2011-09-09

  * Added jsonp support.

  * Refactored mock.request and entire test suite.

  * Set proper Content-Encoding in gzip middleware.

= 0.4.0 / 2011-09-09

  * Renamed project from link to strata.

  * Added support for Accept* family of HTTP headers.

  * Added gzip support (requires node-compress).

= 0.3.3 / 2011-09-02

  * Added link.run.

  * Builder defaults to returning a 404.

  * Fixed a bug that didn't allow authBasic to be required automatically.

  * Added CHANGES document.

= 0.3.2 / 2011-08-17

  * Reorganized package structure.

  * Fixed sessionCookie bug that did not call the downstream app in some cases.

  * Changed minimum node requirement to 0.4.7.

= 0.3.0 / 2011-08-16
