@@ -1,3 +1,9 @@
+= HEAD
+
+  * Added manual chapter about content negotiation.
+
+  * Some minor documentation tweaks.
+
 = 0.5.4 / 2011-09-20
 
   * Added requestTime environment variable.
